--- a/openfisca_pf/parameters/dicp/tva/taux.yaml
+++ b/openfisca_pf/parameters/dicp/tva/taux.yaml
@@ -1,4 +1,4 @@
-description: taux de TVA
+description: Taux de TVA
 metadata:
   reference: https://law.gov.example/basic-income/amount
 reduit:
@@ -6,7 +6,7 @@ reduit:
   values:
     2008-08-25: 0.05
 intermediaire:
-  description: Taux intermédaire de TVA
+  description: Taux intermédiaire de TVA
   values:
     2013-07-16: 0.13
 normal:
