Added units on TVA and CST-S variables

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.7-slim AS build
 ENV PATH="/opt/venv/bin:$PATH"
 
 COPY docker/install_deps /install_deps
+COPY docker/variables.patch /
 RUN python -m venv /opt/venv \
     && /install_deps
 
