--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_2/boutique_de_produit_locaux_zone_aeroportuaire.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_2/boutique_de_produit_locaux_zone_aeroportuaire.yaml
@@ -1,4 +1,8 @@
 zone_1:
+  part_fixe:
+    description: Part fixe pour les boutiques de produit locaux (zone aéroportuaire) de la zone 1
+    values:
+      2018-01-01: 0
   part_variable:
     description: Part variable pour les boutiques de produit locaux (zone aéroportuaire) de la zone 1
     values:
@@ -8,6 +12,10 @@ zone_1:
     values:
       2018-01-01: 10000
 zone_2:
+  part_fixe:
+    description: Part fixe pour les boutiques de produit locaux (zone aéroportuaire) de la zone 2
+    values:
+      2018-01-01: 0
   part_variable:
     description: Part variable pour les boutiques de produit locaux (zone aéroportuaire) de la zone 2
     values:
@@ -21,11 +29,19 @@ zone_3:
     description: Part variable pour les boutiques de produit locaux (zone aéroportuaire) de la zone 3
     values:
       2018-01-01: 500
+  part_fixe:
+    description: Part fixe pour les boutiques de produit locaux (zone aéroportuaire) de la zone 3
+    values:
+      2018-01-01: 0
   montant_minimum:
     description: montant minimum pour les boutiques de produit locaux (zone aéroportuaire) de la zone 3
     values:
       2018-01-01: 10000
 zone_4:
+  part_fixe:
+    description: Part fixe pour les boutiques de produit locaux (zone aéroportuaire) de la zone 4
+    values:
+      2018-01-01: 0
   part_variable:
     description: Part variable pour les boutiques de produit locaux (zone aéroportuaire) de la zone 4
     values:
